Fix transparency level behind links

--- a/src/assets/app.scss
+++ b/src/assets/app.scss
@@ -140,8 +140,7 @@ body {
         }
       }
     }
-    .navbar,
-    .navbar-menu {
+    .navbar {
       background-color: var(--highlight-secondary);
 
       a {
@@ -152,6 +151,9 @@ body {
           color: var(--text-header);
           background-color: var(--highlight-hover);
         }
+      }
+	.navbar-menu {
+      background-color: inherit;
       }
     }
     .navbar-end {
